完成detail页面地图的渲染、点击地图获取坐标并设置起终点、路径规划、遮罩区多边形绘制

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
+    
+    <script src="https://map.qq.com/api/gljs?v=1.exp&key=CZIBZ-OS4KW-BJ2RO-OHZTC-6GVA5-3NBQN&libraries=service"></script>
   </head>
   <body>
     <div id="root"></div>
